Time: 28 ms (91.96%) | Memory: 120.7 MB (78.70%) - LeetSync